# batteries-server

./: .gitignore  CMakeLists.txt
include/: battery.hpp  game_object.hpp  message.hpp  player.hpp  shared_state.hpp
lib/: CMakeLists.txt  battery.cpp  game_object.cpp  http_session.cpp  message.cpp  player.cpp  shared_state.cpp  websocket_session.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  player_test.cpp
